# OrtKI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUtil.cmake  DisableOption.cmake  LICENSE  conanfile.py  main.cpp
.github/workflows/: build-csharp.yml  build-linux.yml  build-mac.yml  build-win.yml  build.yaml
CSharp/: .gitignore  NuGet.Config  OrtKiCSharp.sln
CSharp/OrtKI/: Operators.cs  OperatorsWrapper.cs  OrtDataType.cs  OrtKI.cs  OrtKI.csproj  OrtKI.nuspec  Tensor.Conversions.cs  Tensor.Operators.cs  Tensor.cs
CSharp/OrtKIRun/: OrtKIRun.csproj  Program.cs
CSharp/OrtKISharp/: BFloat16.cs  Float16.cs  Native.cs  Operators.Patch.cs  Operators.cs  OperatorsWrapper.Patch.cs  OperatorsWrapper.cs  OrtDataType.cs  OrtKI.cs  OrtKI.nuspec  OrtKISharp.csproj  OrtKISharp.nuspec  Tensor.Conversions.cs  Tensor.Create.cs  Tensor.Operators.cs  Tensor.cs
CSharp/OrtKITest/: KernelTest.cs  OrtKITest.csproj  Startup.cs  TensorTest.cs
CSharp/libortki/: libortki-linux.nuspec  libortki-osx-arm64.nuspec  libortki-osx.nuspec  libortki-win.nuspec  libortki.nuspec
cmake/: configure-conan.cmake
include/: allocator_manager.h  c_api.h  common.h  default_providers.h  environment.h  kernels.h  op_executor.h  operators.h  operators_patch.h  provider_test_utils.h  tensor.h  util.h
include/kernels/: binary.def  binary.h  cast.h  tensor.h  unary.def  unary.h
src/: allocator_manager.cpp  allocator_manager.h  binary.cpp  c_api.cpp  datatype.h  default_providers.cpp  default_providers.h  environment.cpp  main.cpp  op_executor.cpp  op_executor.h  operators.cpp  operators_patch.cpp  tensor.h  util.cpp  util.h
src/kernels/: binary.cpp  tensor.cpp  unary.cpp
tools/: __init__.py  build.sh  gen_operators.py  generator.py
